--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,50 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+	font-family: 'LibreFranklin-VariableFont';
+	src: url('/fonts/LibreFranklin-VariableFont_wght.woff2') format('woff2 supports variations'),
+		url('/fonts/LibreFranklin-VariableFont_wght.woff2') format('woff2-variations');
+	font-weight: 100 1000;
+	font-stretch: 25% 151%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+	h1 {
+		@apply text-2xl;
+	}
+
+	h2 {
+		@apply text-xl;
+		background-color: red;
+	}
+
+	body {
+		/* font-family: 'LibreFranklin-VariableFont'; */
+		/* font-weight: 900; */
+	}
 }
 
-* {
-  box-sizing: border-box;
+@layer components {
+	.btn-blue {
+		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+	}
+}
+
+@responsive {
+	.bg-gradient-brand {
+		background-image: linear-gradient(blue, green);
+	}
+}
+
+@layer utilities {
+	@variants hover, focus {
+		.filter-none {
+			filter: none;
+		}
+		.filter-grayscale {
+			filter: grayscale(100%);
+		}
+	}
 }
