--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,40 +11,12 @@
 }
 
 @layer base {
-	h1 {
-		@apply text-2xl;
-	}
-
-	h2 {
-		@apply text-xl;
-		background-color: red;
-	}
-
-	body {
-		/* font-family: 'LibreFranklin-VariableFont'; */
-		/* font-weight: 900; */
-	}
+	/* body {
+	} */
 }
 
 @layer components {
 	.btn-blue {
 		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
-	}
-}
-
-@responsive {
-	.bg-gradient-brand {
-		background-image: linear-gradient(blue, green);
-	}
-}
-
-@layer utilities {
-	@variants hover, focus {
-		.filter-none {
-			filter: none;
-		}
-		.filter-grayscale {
-			filter: grayscale(100%);
-		}
 	}
 }
