--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,10 @@
 }
 
 @layer components {
+	.container-default {
+		@apply container relative mx-auto max-w-7xl px-4 sm:px-6;
+	}
+
 	.btn-blue {
 		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
 	}
