--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@
 		@apply container relative mx-auto max-w-7xl px-8 sm:px-14;
 	}
 
-	.btn-blue {
-		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+	.button-default {
+		@apply flex cursor-pointer items-center justify-center px-8 py-3 border-transparent text-base font-medium rounded-2xl text-white bg-yellow-500 hover:bg-yellow-600 md:py-4 md:text-lg;
 	}
 }
