signup form added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,6 @@
 	}
 
 	.button-default {
-		@apply flex cursor-pointer items-center justify-center px-8 py-3 border-transparent text-base font-medium rounded-2xl text-white bg-yellow-500 hover:bg-yellow-600 md:py-4 md:text-lg;
+		@apply flex cursor-pointer items-center justify-center px-8 py-3 border-transparent text-base font-medium rounded-2xl text-white bg-yellow-500 hover:bg-yellow-600 md:py-4 md:text-lg outline-none ring-0 focus:outline-none;
 	}
 }
