--- a/src/pages/posts/post.module.css
+++ b/src/pages/posts/post.module.css
@@ -26,7 +26,7 @@
 }
 
 .article h1 {
-	font-size: 2rem;
+	font-size: 1.8rem;
 }
 
 .article h2 {
@@ -56,6 +56,7 @@
 	display: block;
 	width: 100%;
 	margin: 4rem auto;
+	filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
 }
 
 .article a {
@@ -74,7 +75,30 @@
 	height: 18rem;
 }
 
+.article table {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.article td {
+	padding-left: 0.4rem;
+	padding-right: 0.4rem;
+}
+
 @media (min-width: 640px) {
+	.article h1 {
+		font-size: 2rem;
+	}
+
+	.article h1,
+	.article h2,
+	.article h3,
+	.article h4,
+	.article h5,
+	.article h6 {
+		margin: 0.2rem auto;
+	}
+
 	.header {
 		height: 24rem;
 	}
